// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decimal-length prop 1`] = `
<div class="zv-submit-bar">
  <div class="zv-submit-bar__bar">
    <div class="zv-submit-bar__text"><span>合计：</span><span class="zv-submit-bar__price">¥<span class="zv-submit-bar__price zv-submit-bar__price--integer">1</span>.1</span></div><button class="zv-button zv-button--danger zv-button--normal zv-button--round zv-submit-bar__button zv-submit-bar__button--danger"></button>
  </div>
</div>
`;

exports[`disable submit 1`] = `
<div class="zv-submit-bar">
  <div class="zv-submit-bar__bar">
    <div class="zv-submit-bar__text"><span>合计：</span><span class="zv-submit-bar__price">¥<span class="zv-submit-bar__price zv-submit-bar__price--integer">0</span>.01</span></div><button disabled="disabled" class="zv-button zv-button--danger zv-button--normal zv-button--disabled zv-button--round zv-submit-bar__button zv-submit-bar__button--danger"></button>
  </div>
</div>
`;

exports[`suffix-label prop 1`] = `
<div class="zv-submit-bar">
  <div class="zv-submit-bar__bar">
    <div class="zv-submit-bar__text"><span>Label</span><span class="zv-submit-bar__price">¥<span class="zv-submit-bar__price zv-submit-bar__price--integer">1</span>.11</span><span class="zv-submit-bar__suffix-label">Suffix Label</span></div><button class="zv-button zv-button--danger zv-button--normal zv-button--round zv-submit-bar__button zv-submit-bar__button--danger"></button>
  </div>
</div>
`;

exports[`text-align prop 1`] = `
<div class="zv-submit-bar">
  <div class="zv-submit-bar__bar">
    <div class="zv-submit-bar__text" style="text-align: left;"><span>合计：</span><span class="zv-submit-bar__price">¥<span class="zv-submit-bar__price zv-submit-bar__price--integer">1</span>.11</span></div><button class="zv-button zv-button--danger zv-button--normal zv-button--round zv-submit-bar__button zv-submit-bar__button--danger"></button>
  </div>
</div>
`;

exports[`top slot 1`] = `
<div class="zv-submit-bar">top<div class="zv-submit-bar__bar"><button class="zv-button zv-button--danger zv-button--normal zv-button--round zv-submit-bar__button zv-submit-bar__button--danger"></button></div>
</div>
`;

exports[`without price 1`] = `
<div class="zv-submit-bar">
  <div class="zv-submit-bar__bar"><button class="zv-button zv-button--danger zv-button--normal zv-button--round zv-submit-bar__button zv-submit-bar__button--danger"></button></div>
</div>
`;
